<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.assessor.android.camera.CameraView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:mode="video"
        app:aspectRatio="4:3"
        app:autoFocus="true"
        app:facing="front"
        app:fillSpace="false"
        app:flash="auto"
        app:pinchToZoom="false"
        app:showFocusIndicator="true">

        <TextView
            android:id="@+id/timestamp"
            android:text="08-10-2020"
            android:textSize="8pt"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginBottom="100dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/metrophobic"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.assessor.android.camera.CameraView>

    <ImageButton
        android:id="@+id/flash_torch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/light_off"
        android:background="?android:selectableItemBackground" />

    <TextView
        android:id="@+id/zoomValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_above="@+id/actions_layout"
        android:gravity="center_horizontal"
        android:text="@string/recording"
        android:textSize="14sp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        tools:visibility="visible" />

    <cn.iwgang.countdownview.CountdownView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:isHideTimeBackground="true"
        android:layout_margin="@dimen/margin_10"
        android:layout_alignParentRight="true"
        android:id="@+id/cv_countdownView"
        android:layout_marginRight="@dimen/margin_10"
        app:isShowMinute="true"
        app:isShowSecond="true"
        app:isShowMillisecond="true"
        app:timeTextColor="@color/white"
        app:timeTextSize="22sp"
        app:isTimeTextBold="true"
        app:suffixGravity="bottom"
        app:suffixTextColor="@color/white"
        app:suffixTextSize="12sp"

        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/actions_layout"
        android:padding="4dp"
        android:background="#3fffffff">

        <top.defaults.view.TextButton
            android:id="@+id/chooseRatio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/ratio"
            android:textColor="@android:color/white"
            app:underline="true"
            app:textEffect="animateSize" />

        <top.defaults.view.TextButton
            android:id="@+id/chooseSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/image_size"
            android:textColor="@android:color/white"
            app:underline="true"
            app:textEffect="animateSize" />

        <CheckBox
            android:id="@+id/fillSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill"
            android:textColor="#ffffff"
            android:buttonTint="#ffffff" />

        <CheckBox
            android:id="@+id/enableZoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoom"
            android:textColor="#ffffff"
            android:buttonTint="#ffffff" />

        <top.defaults.view.TextButton
            android:id="@+id/flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/flash_auto"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_flash_auto"
            app:underline="true"
            app:textEffect="animateColor" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/actions_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#3fffffff">

        <top.defaults.view.TextButton
            android:id="@+id/switch_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="16dp"
            android:visibility="invisible"
            android:textColor="@android:color/white"
            android:text="@string/video_mode" />

        <TextView
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:minWidth="200dp"
            android:layout_centerInParent="true"
            android:padding="16dp"
            android:textSize="10pt"
            android:fontFamily="@font/metrophobic"
            android:textColor="@color/white"
            android:text="START RECORDING"
            android:background="@color/app_theme" />

        <ImageButton
            android:id="@+id/flip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:padding="16dp"
            android:src="@drawable/ic_switch_camera"
            android:background="?android:selectableItemBackground" />

    </RelativeLayout>

</RelativeLayout>